--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,18 @@
 
 export(et_gsea_plot)
 export(fig_label)
+export(get_genes)
+export(normalization)
+export(plot_expr_hm)
+export(plot_volcano)
+export(truncate_survival)
+importFrom(gplots,heatmap.2)
 importFrom(graphics,boxplot)
+importFrom(graphics,points)
 importFrom(graphics,text)
+importFrom(igraph,compare)
+importFrom(stats,hclust)
+importFrom(stats,prcomp)
+importFrom(stats,qqnorm)
 importFrom(stats,wilcox.test)
+importFrom(survival,Surv)
