--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ License: GPL
 Encoding: UTF-8
 LazyData: TRUE
 Imports:
-    memoise, igraph, gplots, survival
+    memoise, igraph, gplots, survival, grDevices, utils
 Depends:
     methods
 RoxygenNote: 7.1.1
